--- a/2018_US_Bikeshare_Analysis.html
+++ b/2018_US_Bikeshare_Analysis.html
@@ -11894,9 +11894,9 @@ You can access Timestamp as pandas.Timestamp
     <span class="k">return</span> <span class="p">(</span><span class="n">city</span><span class="p">,</span> <span class="n">first_trip</span><span class="p">)</span>
 
 <span class="c1"># list of files for each city</span>
-<span class="n">data_files</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/NYC-CitiBike-2018.csv&#39;</span><span class="p">,</span>
-              <span class="s1">&#39;./data/Chicago-Divvy-2018.csv&#39;</span><span class="p">,</span>
-              <span class="s1">&#39;./data/Washington-CapitalBikeshare-2018.csv&#39;</span><span class="p">,]</span>
+<span class="n">data_files</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/nycbike2018.csv&#39;</span><span class="p">,</span>
+              <span class="s1">&#39;./data/chi18data.csv&#39;</span><span class="p">,</span>
+              <span class="s1">&#39;./data/wadccapital18.csv&#39;</span><span class="p">,]</span>
 
 <span class="c1"># print the first trip from each file, store in dictionary to check the code works</span>
 <span class="n">example_trips</span> <span class="o">=</span> <span class="p">{}</span>
@@ -12205,12 +12205,12 @@ OrderedDict([(&#39;Duration (ms)&#39;, &#39;427387&#39;),
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Run this cell to check your work</span>
-<span class="n">city_info</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;Washington&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;in_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/Washington-CapitalBikeshare-2018.csv&#39;</span><span class="p">,</span>
-                            <span class="s1">&#39;out_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">},</span>
-             <span class="s1">&#39;Chicago&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;in_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/Chicago-Divvy-2018.csv&#39;</span><span class="p">,</span>
-                         <span class="s1">&#39;out_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/Chicago-2018-Summary.csv&#39;</span><span class="p">},</span>
-             <span class="s1">&#39;NYC&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;in_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/NYC-CitiBike-2018.csv&#39;</span><span class="p">,</span>
-                     <span class="s1">&#39;out_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/NYC-2018-Summary.csv&#39;</span><span class="p">}}</span>
+<span class="n">city_info</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;Washington&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;in_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/wadccapital18.csv&#39;</span><span class="p">,</span>
+                            <span class="s1">&#39;out_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">},</span>
+             <span class="s1">&#39;Chicago&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;in_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/chi18data.csv&#39;</span><span class="p">,</span>
+                         <span class="s1">&#39;out_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/chi18summary.csv&#39;</span><span class="p">},</span>
+             <span class="s1">&#39;NYC&#39;</span><span class="p">:</span> <span class="p">{</span><span class="s1">&#39;in_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/nycbike2018.csv&#39;</span><span class="p">,</span>
+                     <span class="s1">&#39;out_file&#39;</span><span class="p">:</span> <span class="s1">&#39;./data/nyc18summary.csv&#39;</span><span class="p">}}</span>
 
 <span class="k">for</span> <span class="n">city</span><span class="p">,</span> <span class="n">filenames</span> <span class="ow">in</span> <span class="n">city_info</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
     <span class="n">condense_data</span><span class="p">(</span><span class="n">filenames</span><span class="p">[</span><span class="s1">&#39;in_file&#39;</span><span class="p">],</span> <span class="n">filenames</span><span class="p">[</span><span class="s1">&#39;out_file&#39;</span><span class="p">],</span> <span class="n">city</span><span class="p">)</span>
@@ -12342,9 +12342,9 @@ OrderedDict([(&#39;duration&#39;, &#39;11.433333333333334&#39;),
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">## Modify this and the previous cell to answer Question 4a. Remember to run ##</span>
 <span class="c1">## the function on the cleaned data files you created from Question 3.      ##</span>
 
-<span class="n">filepaths</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/NYC-2018-Summary.csv&#39;</span><span class="p">,</span> 
-             <span class="s1">&#39;./data/Chicago-2018-Summary.csv&#39;</span><span class="p">,</span> 
-             <span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">]</span>
+<span class="n">filepaths</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/nyc18summary.csv&#39;</span><span class="p">,</span> 
+             <span class="s1">&#39;./data/chi18summary.csv&#39;</span><span class="p">,</span> 
+             <span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">]</span>
 
 
 <span class="k">for</span> <span class="n">path</span> <span class="ow">in</span> <span class="n">filepaths</span><span class="p">:</span>
@@ -12373,7 +12373,7 @@ OrderedDict([(&#39;duration&#39;, &#39;11.433333333333334&#39;),
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>./data/NYC-2018-Summary.csv : 
+<pre>./data/nyc18summary.csv : 
 
 n_subscribers:  245896
 n_customers:  30184
@@ -12382,7 +12382,7 @@ proportion subscribers:  0.8906693711967546
 proportion customers:  0.10933062880324544
 
 
-./data/Chicago-2018-Summary.csv : 
+./data/chi18summary.csv : 
 
 n_subscribers:  54981
 n_customers:  17149
@@ -12391,7 +12391,7 @@ proportion subscribers:  0.7622487175932344
 proportion customers:  0.23775128240676557
 
 
-./data/Washington-2018-Summary.csv : 
+./data/wadc18summary.csv : 
 
 n_subscribers:  51752
 n_customers:  14573
@@ -12477,9 +12477,9 @@ proportion customers:  0.21972107048624198
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">## Modify this and the previous cell to answer Question 4b. ##</span>
 
-<span class="n">filepaths</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/NYC-2018-Summary.csv&#39;</span><span class="p">,</span> 
-             <span class="s1">&#39;./data/Chicago-2018-Summary.csv&#39;</span><span class="p">,</span> 
-             <span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">]</span>
+<span class="n">filepaths</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/nyc18summary.csv&#39;</span><span class="p">,</span> 
+             <span class="s1">&#39;./data/chi18summary.csv&#39;</span><span class="p">,</span> 
+             <span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">]</span>
 
 <span class="c1"># Display the data created by population_overtime function</span>
 <span class="k">for</span> <span class="n">path</span> <span class="ow">in</span> <span class="n">filepaths</span><span class="p">:</span>    
@@ -12505,19 +12505,19 @@ proportion customers:  0.21972107048624198
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>./data/NYC-2018-Summary.csv : 
+<pre>./data/nyc18summary.csv : 
 
 average travel time (min):  15.8125996067
 proportion over 30 mins:  0.07302463538260892
 
 
-./data/Chicago-2018-Summary.csv : 
+./data/chi18summary.csv : 
 
 average travel time (min):  16.563645039
 proportion over 30 mins:  0.08332178011922917
 
 
-./data/Washington-2018-Summary.csv : 
+./data/wadc18summary.csv : 
 
 average travel time (min):  18.933051618
 proportion over 30 mins:  0.10839050131926121
@@ -12600,9 +12600,9 @@ proportion over 30 mins:  0.10839050131926121
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">## Modify this and the previous cell to answer Question 4c. ##</span>
 
-<span class="n">filepaths</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/NYC-2018-Summary.csv&#39;</span><span class="p">,</span> 
-             <span class="s1">&#39;./data/Chicago-2018-Summary.csv&#39;</span><span class="p">,</span> 
-             <span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">]</span>
+<span class="n">filepaths</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;./data/nyc18summary.csv&#39;</span><span class="p">,</span> 
+             <span class="s1">&#39;./data/chi18summary.csv&#39;</span><span class="p">,</span> 
+             <span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">]</span>
 
 <span class="c1"># Display the data created by porportion_overtime function</span>
 <span class="k">for</span> <span class="n">path</span> <span class="ow">in</span> <span class="n">filepaths</span><span class="p">:</span> 
@@ -12629,7 +12629,7 @@ proportion over 30 mins:  0.10839050131926121
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>./data/Washington-2018-Summary.csv : 
+<pre>./data/wadc18summary.csv : 
 
 Proportion Customers:  0.7907914869940187
 Proportion Subscribers:  0.20920851300598137
@@ -12751,7 +12751,7 @@ Proportion Subscribers:  0.20920851300598137
 <div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">,</span> <span class="s2">&quot;Frequency&quot;</span><span class="p">,</span> <span class="n">facet</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">x_facet</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">x_axis_limit</span><span class="o">=</span><span class="mi">75</span><span class="p">,</span> <span class="n">n_bins</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">,</span> <span class="s2">&quot;Frequency&quot;</span><span class="p">,</span> <span class="n">facet</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">x_facet</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">x_axis_limit</span><span class="o">=</span><span class="mi">75</span><span class="p">,</span> <span class="n">n_bins</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -13338,7 +13338,7 @@ mmgAAAAgRjTRAAAAQIxoogEAAIAY/T9fp6o8Pt+uiAAAAABJRU5ErkJggg==
 <div class="prompt input_prompt">In&nbsp;[17]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">,</span><span class="s1">&#39;Frequency&#39;</span><span class="p">,</span> 
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">,</span><span class="s1">&#39;Frequency&#39;</span><span class="p">,</span> 
                  <span class="n">facet</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">x_facet</span><span class="o">=</span><span class="s1">&#39;month&#39;</span><span class="p">,</span> <span class="n">y_facet</span><span class="o">=</span><span class="s1">&#39;user_type&#39;</span><span class="p">,</span> 
                  <span class="n">x_axis_limit</span><span class="o">=</span><span class="mi">75</span><span class="p">,</span> <span class="n">n_bins</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
 </pre></div>
@@ -14405,7 +14405,7 @@ wkSdaEIIIYQQQsL0/wF7A6pqTngYuAAAAABJRU5ErkJggg==
 <div class="prompt input_prompt">In&nbsp;[18]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">,</span> <span class="s1">&#39;Frequency&#39;</span><span class="p">,</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">,</span> <span class="s1">&#39;Frequency&#39;</span><span class="p">,</span>
                  <span class="n">facet</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">x_facet</span><span class="o">=</span><span class="s1">&#39;hour&#39;</span><span class="p">,</span> <span class="n">y_facet</span><span class="o">=</span><span class="s1">&#39;user_type&#39;</span><span class="p">,</span> 
                  <span class="n">x_axis_limit</span><span class="o">=</span><span class="mi">75</span><span class="p">,</span> <span class="n">n_bins</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
 </pre></div>
@@ -15792,7 +15792,7 @@ QoiH/j+HgLwdnTuCbQAAAABJRU5ErkJggg==
 <div class="prompt input_prompt">In&nbsp;[19]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">,</span> <span class="s1">&#39;Frequency&#39;</span><span class="p">,</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">create_histogram</span><span class="p">(</span><span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">,</span> <span class="s1">&#39;Frequency&#39;</span><span class="p">,</span>
                  <span class="n">facet</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">x_facet</span><span class="o">=</span><span class="s1">&#39;day_of_week&#39;</span><span class="p">,</span> <span class="n">y_facet</span><span class="o">=</span><span class="s1">&#39;user_type&#39;</span><span class="p">,</span> 
                  <span class="n">x_axis_limit</span><span class="o">=</span><span class="mi">75</span><span class="p">,</span> <span class="n">n_bins</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
 </pre></div>
@@ -16637,7 +16637,7 @@ Ig+xiCYiIiIi8hCLaCIiIiIiD7GIJiIiIiLy0P8DuqQyg7In+FUAAAAASUVORK5CYII=
     <span class="k">return</span> <span class="n">dict_for_df</span>
     
 <span class="c1"># Test function</span>
-<span class="nb">print</span><span class="p">(</span><span class="n">calculate_subscriber_ratio</span><span class="p">(</span><span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">))</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">calculate_subscriber_ratio</span><span class="p">(</span><span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">))</span>
 </pre></div>
 
 </div>
@@ -16692,7 +16692,7 @@ Ig+xiCYiIiIi8hCLaCIiIiIiD7GIJiIiIiLy0P8DuqQyg7In+FUAAAAASUVORK5CYII=
 <div class="prompt input_prompt">In&nbsp;[22]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">newdict</span> <span class="o">=</span> <span class="n">calculate_subscriber_ratio</span><span class="p">(</span><span class="s1">&#39;./data/Washington-2018-Summary.csv&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">newdict</span> <span class="o">=</span> <span class="n">calculate_subscriber_ratio</span><span class="p">(</span><span class="s1">&#39;./data/wadc18summary.csv&#39;</span><span class="p">)</span>
 <span class="n">create_barchart</span><span class="p">(</span><span class="n">newdict</span><span class="p">)</span>
 </pre></div>
 
